1. 单元测试，抽取对象赋值； 2. 使用Mockito.mock替换对象创建